# posting-tools

./: .env.example  .gitignore  BUILD_GUIDE.md  INSTALLER_GUIDE.md  NON_DEVELOPER_SETUP.md  PROJECT_STRUCTURE.md  README.md  RELEASE_GUIDE.md  SECURITY.md  TROUBLESHOOTING.md  eslint.config.js  index.html  package-lock.json  package.json  requirements.txt  tailwind.config.ts  tsconfig.backend.json  tsconfig.json  vite.config.mjs  vitest.config.mjs
config/: mappings.json  oauth_client.example.json
core/: __init__.py  accounts.py  ai_resolver.py  audit.py  branch_folder_lookup.py  classifier.py  concurrency.py  daily_report.py  google_sheets.py  ibp_resolver.py  other_payment.py  parser.py  receipt.py  scr_vs_br.py  settings.py  validation.py
docs/: ARCHITECTURE_REFACTOR.md  CLEAN_MODULAR_ARCHITECTURE.md  DEPLOYMENT_VALIDATION_REPORT.md  ROLLOUT.md
python_backend/: __init__.py
scripts/: build_release.ps1  build_updater_release.ps1  clean_release.ps1  cleanup_generated_artifacts.ps1  doctor.ps1  make_portable.ps1  python_bridge.py  regression_compare.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.simloans.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: README.md
src-tauri/python/: README.md
src-tauri/resources/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: commands.rs  validation.rs
src-tauri/src/infrastructure/: config.rs  logging.rs  mod.rs  python_bridge.rs
tests/: fixtures_duplicate_history.csv  test_architecture_ports.py  test_core.py  (+1 more)
tests-ts/: previewPanel.test.ts  scan.test.ts  security.test.ts
(+118 files in other folders)
