[package]
name = "simsoft-posting"
version = "0.1.0"
description = "Posting Tools desktop shell"
authors = ["SIMSOFT"]
edition = "2021"

[lib]
name = "simsoft_posting_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.16"
open = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
